Prevent table double borders

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -240,6 +240,7 @@ table {
   border: solid 1px #ddd;
   margin-bottom: 1.25rem;
   width: 100%;
+  border-collapse: collapse;
 
   thead,
   tfoot {
